app/src/assets/stylesheets/styles.scss
/* https://designsystem.digital.gov/documentation/getting-started/developers/phase-two-compile/ */
/* styles.scss */

// 1. Load USWDS settings
@forward "uswds-settings.scss";

// 2. Load USWDS source code
@forward "uswds";

// 3. Load your project's custom Sass
// @forward "project-custom.scss";

.flex-wrapper {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  justify-content: flex-start;
}

.usa-footer {
  margin-top: auto;
}

h4.usa-step-indicator__heading {
  display: none;
}

.usa-card__container .usa-radio {
  border-radius: 0.5rem;
}

.proofing .usa-accordion__heading:not(:first-child),
.usa-prose .usa-accordion__heading:not(:first-child) {
  margin-top: 4rem;
}

